# rust-todo-app-rocket

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/domain/: account.rs  errors.rs  mod.rs  todo.rs
src/handler/: account.rs  guards.rs  mod.rs  models.rs  todo.rs
src/migrations/: 0001_create_todo_items_table.sql
src/repository/: account.rs  mod.rs  models.rs  todo.rs
src/service/: account.rs  todo.rs
